responsive-item-added

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
             </div>
         </div>
 
-        <div class="background_img">
-            <div class="background_left_text">
-                <p>Date</p>
-                <h3>February 13, 2024</h3>
-            </div>
+        <div class="background_img"></div>
+    
+        <div class="content_1">
+            <p>Date</p>
+            <h3>February 13, 2024</h3>
+        </div>
 
-            <div class="background_right_text">
-                <p>Time</p>
-                <h3>4:00 - 10:00 PM</h3>
-            </div>
+        <div class="content_2">
+            <p>Time</p>
+            <h3>4:00 - 10:00 PM</h3>
         </div>
 
         <div class="background_img2">
